# machine-learning-operations-test

./: pyproject.toml
.github/workflows/: deploy-package.yml
src/: setup.py
src/infrastructure/restaurant_model_prediction/runtime/: main.py
src/infrastructure/restaurant_model_prediction/runtime/functions/: modeling.py  pre_processing.py
src/trainer/functions/: pre_processing.py
src/trainer/models/: catboost_regressor.py  gradient_boosting_regressor.py  random_forest_regressor.py  xgboost_regressor.py
