[tool.poetry]
name = "machine-learning-operations-test"
version = "0.1.0"
description = ""
authors = ["Phupirat <phupiratrammasith@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_operations_test"}]

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
