[tool.poetry]
name = "machine-learning-operations-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "machine_learning_operations_test"}]

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.1.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
google-cloud-aiplatform = "^1.36.1"
gcsfs = "^2023.10.0"
catboost = "^1.2.2"
xgboost = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
black = "*"
pylint = ">=2.14.4"
codecov = ">=2.1.13"
pytest-cov = "*"
pytest-html = "*"
mypy = "*"
flake8-docstrings = ">=1.6.0"
darglint = ">=1.8.1"

[tool.black]
# Note: this needs to be consistent with `FORMAT/max-line-length` in .pylintrc
line-length = 120



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
